Fix bug overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -79,6 +79,7 @@
         position: relative;
         left: auto;
         top: 50%;
+        overflow: scroll;
     }
 
     .es-store-header {
